@@ -103,6 +103,14 @@ operator
   (Contributed by Joe Jevnik in :issue:`24379`.)
 
 
+rlcomplete
+----------
+
+Private and special attribute names now are omitted unless the prefix starts
+with underscores.  A space or a colon can be added after completed keyword.
+(Contributed by Serhiy Storchaka in :issue:`25011` and :issue:`25209`.)
+
+
 Optimizations
 =============
 
